Add CSS parser and refactor UI DOM/events
Introduce CSS support (XplCssLexer, XplCssParser, XplCssToken/TokenType, TestXplCss) and HTML helpers (HtmlTagUtils). Refactor the UI/document/event model: replace the old XplEvent, add events/XplEvent and XplNativeObject, move XplNode into the html package, and update DomEvaluator, XplDocument, XplElement, XplEventListener and related UI engines (JavaFxRenderer, SuperUiEngine, XplUiBridge) to integrate the new model. Update language/runtime integrations (Interpreter, Parser) and native modules (NativeChannel, NativeUrl) and add poo/XplMethodGroup; adjust tests accordingly. Commit also includes IDE config and many build artifacts/compiled classes generated during the build.